--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,16 +11,23 @@
                 <p style="color: lightslategray; text-align: center;">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please enter your login
                     details&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <form 
+                [formGroup]="loginForm" 
+                (ngSubmit)="onSubmit()"
+                >
                     <div class="form-group">
-                        <input type="email" id="email" placeholder="Email" class="form-control" formControlName="email"
+                        <input 
+                        type="email" 
+                        id="email" 
+                        placeholder="Email" 
+                        class="form-control" formControlName="email"
                             name="email" />
                     </div>
                     <div class="form-group">
                         <input type="password" id="password" placeholder="Password" class="form-control"
                             formControlName="password" name="password" />
                     </div>
-                    <input type="submit" class="btn btn-primary w-100" value="Login" name="">
+                    <button type="submit" class="btn btn-primary w-100" name="">Login</button>
                 </form>
             </div>
             <div class="card-footer text-right">
