--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -21,8 +21,8 @@
                 <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="./contact">Contact</a>
                 </li>
-                <li class=" btn-primary nav-item text-white" role="button">
-                    <a class="nav-link text-white" (click)="logout()">logout</a>
+                <li class="btn btn-primary nav-item text-white" role="button">
+                    <a class="nav-link text-white" (click)="logout()">Logout</a>
                 </li>
             </ul>
         </div>
